# EVIDA

./: .gitignore  AGENTS.md  ARCHITECTURE.md  CURRENT_STATUS.md  CasePilot_Prod_Grade_Spec_v2_Adaptive_Saksrom.md  CasePilot_Prod_Grade_Spec_v3_Adaptive_Saksrom_Litigation_Simulation.md  Evida_Actual_Folder_Pilot_Readiness_Report.md  Evida_CasePilot_CTO_Handoff_MultiWindow_Settings_Security.docx  Evida_Prod_Grade_Spec.md  README.md  SECURITY.md  Start Evida.bat  Start Saksrom Pro.bat  Start_Saksrom_Pro.cmd  casepilot_first_user_readiness_pack_manifest.json  evida_fix_this_developer_doc.md  evida_legal_command_center_design_spec.md  evida_pilot_p0_git_patch.diff
.github/: pull_request_template.md
CasePilot_Phase_1_3/: DATA_API_REQUIREMENTS.md  FEATURE_INVENTORY.md  MVP_SCOPE.md  PHASE_1_3_SUMMARY.md  PRODUCT_FLOWS.md  PROJECT_BRIEF.md  README_MASTER.md  RISKS_AND_UNKNOWNS.md  (+3 more)
evida-core/ai-engine/: README.md  pdf_import_worker.py  pdf_search.py  pyproject.toml  requirements.txt
evida-core/ai-engine/db/: schema.sql
evida-core/ai-engine/saksrom_ai/: __init__.py  chronology.py  citations.py  control.py  hashing.py  ingestion.py  ocr.py  provider_openai.py  risk.py
evida-core/ai-engine/tests/: test_chunking_and_agent.py  test_control_report.py  test_ocr.py
evida-core/backend-api/: DEPRECATED.md  README.md  pyproject.toml
evida-core/backend-api/app/: main.py  models.py
evida-core/backend-api/app/prompts/: legal_system_prompt.md
evida-core/backend-api/app/routers/: __init__.py  ai.py  audit.py  devices.py  diagnostics.py  policies.py  tenants.py
evida-core/backend-api/app/services/: ai_gateway.py  redaction.py
evida-core/backend-api/tests/: test_redaction.py
evida-core/desktop-tauri/src-tauri/: Cargo.toml  rust-toolchain.toml  tauri.conf.json
evida-core/desktop-tauri/src-tauri/capabilities/: default.json
evida-core/desktop-tauri/src-tauri/src/: audit.rs  commands.rs  crypto.rs  db.rs  db_key.rs  domain.rs  hash.rs  ingestion.rs  ingestion_core.rs  lib.rs  main.rs
evida-core/desktop-tauri/src-tauri/src/import/: mod.rs  pdf_import.rs  pdf_search.rs
saksrom-pro/desktop-tauri/src-tauri/: Cargo.toml  tauri.conf.json
saksrom-pro/desktop-tauri/src-tauri/capabilities/: default.json
saksrom-pro/desktop-tauri/src-tauri/src/: audit.rs  commands.rs  crypto.rs  db.rs  db_key.rs  domain.rs  hash.rs  ingestion.rs  lib.rs  main.rs
(+528 files in other folders)
