[project]
name = "saksrom-ai-engine"
version = "0.1.0"
description = "Source-bound legal AI/document engine for Evida"
requires-python = ">=3.11"
dependencies = [
  "pydantic>=2.6",
  "pypdf>=5.0",
  "PyMuPDF==1.24.14"
]

[project.optional-dependencies]
openai = ["openai>=1.0"]
dev = [
  "pytest>=8.0",
  "ruff>=0.6"
]

[tool.ruff]
line-length = 100
target-version = "py311"
