[project]
name = "saksrom-backend-api"
version = "0.1.0"
description = "Evida backend control plane"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.27",
  "pydantic>=2.6",
  "python-dotenv>=1.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "httpx>=0.27",
  "ruff>=0.6"
]

[tool.ruff]
line-length = 100
target-version = "py311"
