[package]
name = "evida-desktop"
version = "0.1.0"
description = "Evida desktop shell"
authors = ["Evida Team"]
edition = "2021"

[lib]
name = "evida_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
anyhow = "1"
aes-gcm = "0.10"
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
dirs = "5"
pdf-extract = "0.7"
keyring = { version = "3", features = ["windows-native"] }
rusqlite = { version = "0.31", features = ["bundled"] }
rfd = "0.15"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tauri = { version = "2", features = [] }
uuid = { version = "1", features = ["v4", "serde"] }
