[package]
name = "saksrom-pro-desktop"
version = "0.1.0"
description = "Saksrom Pro desktop shell"
authors = ["Saksrom Pro Team"]
edition = "2021"

[lib]
name = "saksrom_pro_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
dirs = "5"
rusqlite = { version = "0.31", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tauri = { version = "2", features = [] }
uuid = { version = "1", features = ["v4", "serde"] }
